# toolbox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: format.yml  tests.yml
docs/: alignment.md  fm-index.md  global_alignment.md  sorting.md  template.md  wavelet_tree.md
docs/bioinfo/: local_alignment.md  nussinov.md  overlap_alignment.md
docs/datastructure/: implicit_treap.md  sparse_table.md  treap.md  unionfind.md  unionfind_weighted.md
docs/geometry/: convex_hull.md  line_intersection.md  point_in_polygon.md
docs/graph/: bellman_ford.md  boruvka.md  diameter_tree.md  dijkstra.md  kruskal.md  prim.md  topological.md
docs/math/: bit_operation.md  math.md
docs/probabilistic/: bloom_filter.md
docs/sorting/: binary_insertion_sort.md  comb_sort.md  gnome_sort.md  merge_sort.md  odd_even_sort.md  shaker_sort.md  shell_sort.md  sorting.md
docs/sorting/exchange_sort/: bubble_sort.md  quick_sort.md  ternary_split_quick_sort.md
docs/sorting/hybrid_sort/: intro_sort.md  merge_insertion_sort.md  tim_sort.md
docs/sorting/insertion_sort/: insertion_sort.md  patience_sort.md
docs/sorting/selection_sort/: cartesian_tree_sort.md  cycle_sort.md  heap_sort.md  selection_sort.md  tournament_sort.md  tree_sort.md
docs/string/: boyer_moore.md  fm-index.md  kmp.md  lcp_array.md  morris_pratt.md  patricia_trie.md  rabin_karp.md  suffixarray.md  trie.md  zalgorithm.md
include/toolbox/datastructure/: datastructure.hpp
include/toolbox/math/: bit_operation.hpp  math.hpp
include/toolbox/sorting/: sorting.hpp
include/toolbox/string/: kmp.hpp  lcp_array.hpp  string.hpp  suffixarray.hpp  suffixarray_Todo.md
includes/toolbox/geometry/: geometry.hpp  line_intersection.hpp  point.hpp  point_in_polygon.hpp
includes/toolbox/graph/: graph.hpp
includes/toolbox/math/: bit_operation.hpp  math.hpp
lib/: unionfind
src/math/: bit_operation.hpp  math.hpp  matrix.hpp
src/string/: fm_index.hpp  lcp_array.hpp  suffixarray.hpp  zalgorithm.hpp
static_lib/: Makefile  toolbox.h
test/: test_util.hpp
test/graph/: Makefile  main.cpp
test/math/: Makefile  main.cpp
test/sorting/: Makefile  main.cpp
tests/graph/: main.cpp
tests/math/: main.cpp
tests/sorting/: main.cpp
tests/utils/: test_util.hpp
toolbox/: alignment.h  bit_operation  datastructure  datastructure.h  fm_index.h  graph.h  implicit_treap.h  lcp_array.h  math  math.h  sparse_table  string  string.h  suffixarray  treap.h  unionfind_weighted  zalgorithm.h
toolbox/datastructure/: datastructure.hpp
toolbox/graph/: graph.hpp
toolbox/math/: bit_operation.hpp  math.hpp
toolbox/sorting/: bubble_sort.hpp  comb_sort.hpp  gnome_sort.hpp  insertion_sort.hpp  intro_sort.hpp  patience_sort.hpp  quick_sort.hpp  selection_sort.hpp  shaker_sort.hpp  shell_sort.hpp  sorting.hpp  ternary_split_quick_sort.hpp  tim_sort.hpp  tournament_sort.hpp
toolbox/string/: fm_index.hpp  lcp_array.hpp  string.hpp  suffixarray.hpp  zalgorithm.hpp
(+194 files in other folders)
